--- a/MvcCrud/Views/Shared/Error.cshtml
+++ b/MvcCrud/Views/Shared/Error.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h2 class="text-danger">Ocurrió un error al procesar su solicitud..</h2>
 
 @if (Model.ShowRequestId)
 {
@@ -13,13 +13,13 @@
     </p>
 }
 
-<h3>Development Mode</h3>
+<h3>Modo de desarrollo</h3>
 <p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
+    Cambiar al entorno de <strong>Desarrollo</strong> mostrará información más detallada sobre el error que ocurrió.
 </p>
 <p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
+    <strong>El entorno de desarrollo no debe estar habilitado para las aplicaciones implementadas.</strong>
+    Puede resultar en la visualización de información confidencial de excepciones a los usuarios finales.
+    Para la depuración local, habilite el entorno de <strong>Desarrollo</strong> configurando <strong>ASPNETCORE_ENVIRONMENT</strong> variable de entorno a <strong>Desarrollo</strong>
+    y reiniciar la aplicación.
 </p>
